--- a/.github/.gitignore
+++ b/.github/.gitignore
@@ -1,10 +1,11 @@
 # Folders
 
 /Data/Images/
-/Data/Labeled Images/
+*/Data/Labeled*Images/
 LabelImg/
+YOLO*Model/Data/Labeled*Images
 Mazevil/
-Processed Images/
+Processed*Images/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
