--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # Folders
 
-/Data/Images/
-/Data/Labeled\ Images/
-LabelImg/
-YOLO\ Model/Data/Labeled\ Images
 Mazevil/
+LabelImg/
+
+*/Data/Images
+*/Data/Labeled\ Images
 Processed\ Images/
 
 *.png
